--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==3.0.1
-gunicorn==23.0.0
-
-requests==2.32.5
-structlog==25.1.0
-
-google-auth==2.3.2
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+pandas==2.2.2
+numpy==2.0.2
+scikit-learn==1.5.2
+joblib==1.4.2
+google-cloud-storage==2.18.2
